# Useless-CLI-Tools

./: CMakeLists.txt  README.md  base64decode.c  base64encode.c  ffill.c  fileutils.c  fileutils.h  ftell.c  strtell.c
